adding auto pilot

--- a/Layouts/Layout 1.xml
+++ b/Layouts/Layout 1.xml
@@ -247,6 +247,7 @@
                     </properties>
                     <instance-variables>
                         <health>10</health>
+                        <IdleTime>0</IdleTime>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="BoundToLayout">
